Try to fix modal position on mobile screen

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -13,6 +13,11 @@ body {
 
 .disableScroll {
   overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 button {
